# herta-lib

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: data.rs  lib.rs  url.rs
src/data/: config.rs  mod.rs
src/extractor/: character.rs  enemy.rs  mod.rs
src/math/: atk.rs  def.rs  mod.rs  toughness.rs
