[package]
name = "herta-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "herta"
crate-type = ["cdylib", "rlib"]

[dependencies]
platform-dirs = "0.3.0"
scraper = "0.17.1"
serde = "1.0.183"
serde_json = "1.0.105"
url = "2.4.0"
